/***********************************************************************
 X3 ChangeLog

2006-08-01  Neil Spierling  <sirvulcan@gmail.com>

	* src/global.c: Make sure we arnt sending duplicate messages in
	some cases.

2006-08-01  Neil Spierling  <sirvulcan@gmail.com>

	* src/x3.conf.example: Removed the targets option.

	* src/global.c: Wrote new function that will global message users
	and/or opers and/or helpers messages in their own langauge. The
	strings are set either in language files or in the global.c message
	struct. This allows us to send defcon notices to people and they
	will get them in their own language if they have it set.

	* src/global.h: global_message_args decleration.

	* src/opserv.c: Removed targets option for defcon as its too hard
	to send messages to people in channels if the people have different
	language settings.

2006-07-31  Neil Spierling  <sirvulcan@gmail.com>

	* src/opserv.c: TODO stuff.

2006-07-31  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added SHUN setting for DEFCON.

	* doc/DEFCON: Added SHUN setting for DEFCON.

	* src/opserv.c: Moved the gline check to here. Also added a SHUN
	check.

	* src/opserv.h: Added SHUN setting for DEFCON.

	* src/proto-p10.c: Moved the DEFCON gline check to opserv.c

2006-07-31  Neil Spierling  <sirvulcan@gmail.com>

	* x3.conf.example: Added new Defcon system settings

	* doc/DEFCON: Anope's Defcon doc adapted for X3.

	* src/chanserv.c: Block mode changes and channel registrations if
	required.

	* src/mod-memoserv.c: Block new memos if required.

	* src/nickserv.c: Block nick registrations if required.

	* src/opserv.c: Added in defcon system, uses some of the anope code.
	Most tho is from scratch.

	* src/opserv.h: Defcon declerations.

	* src/opserv.help: Added DEFCON entry.

	* src/proto-p10.c: If required gline new clients, also if required
	kill new clients.

2006-07-29  Alex Schumann  <rubin@afternet.org>
